grid and type filled css coming

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="grid">
 
-    <h1>Solar System</h1>
+    <h1 class="unit xs-1">Solar System</h1>
 
     <nav>
-      <ul>
-        <li><a href="index.html">Planets</a></li>
-        <li><a href="blueberries.html">Moons</a></li>
-        <li><a href="grapes.html">Exploration</a></li>
+      <ul class="unit xs-1">
+        <li><a href="x.html">Planets</a></li>
+        <li><a href="x.html">Moons</a></li>
+        <li><a href="x.html">Exploration</a></li>
       </ul>
     </nav>
 
