entered the nav

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <h1 class="unit xs-1">Solar System</h1>
 
-    <nav>
-      <ul class="unit xs-1">
+    <nav class="unit xs-1">
+      <ul>
         <li><a href="x.html">Planets</a></li>
         <li><a href="x.html">Moons</a></li>
         <li><a href="x.html">Exploration</a></li>
